# SolvingMicroDSOPs

./: #subfile-the-problem-two-steps-not-three.tex#  .chktexrc  .econtexRoot.sty  .econtexRoot.tex  .gitignore  .latexmkrc  .latexmkrc-for-html  .latexmkrc-for-pdf  .root-commit  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTION.md  Dockerfile  FIGURES.md  IMPROVEMENT-PLAN.md  Notation.md  OptimumDebt_bellman-stages.ipynb  QUICKSTART.md  README.md  REMARK.md  ROADMAP.md  SolvingMicroDSOP.py  SolvingMicroDSOPs  SolvingMicroDSOPs-Add.bib  SolvingMicroDSOPs-Add.readme  SolvingMicroDSOPs-Slides-Add-Refs.readme  SolvingMicroDSOPs-Slides-Add.readme  SolvingMicroDSOPs-Slides-last.pdftotext-nofirstline  SolvingMicroDSOPs-Slides-switches.sty  SolvingMicroDSOPs-Slides.bib  SolvingMicroDSOPs-Slides.pdftotext-nofirstline  SolvingMicroDSOPs-Slides.tex  SolvingMicroDSOPs-clean-clean.dep  SolvingMicroDSOPs-clean-clean.tex  SolvingMicroDSOPs-clean.db  SolvingMicroDSOPs-clean.dep  SolvingMicroDSOPs-clean.tex  SolvingMicroDSOPs-hypersetup.tex  (+207 more)
.agents/: archive-plan-prime-to-delta-script.md  codeinfo-spec.md  orientation-code.md  orientation-latex-math.md  plan-derivative-notation-notebook.md  plan-prime-to-delta-script.md
.devcontainer/: QUICKSTART-TERMINAL.md  QUICKSTART.md  devcontainer.json  post-create.sh  repo-root
.resources/: add_search_paths.tex  econtexPaths-short.tex  econtexPaths.tex  emacs-prettify-symbols-tex_add-local-symbols  prettify-rules
@about-dirs-beginning-with-@/: @dirs-are-for-configs.md
@local/: econtex_onlyinsubfile.tex  local-macros.sty  local-packages.sty  local.sty  owner.sty  subfile-start.tex
@resources/: set-boolean-indicating-execute-permissions.tex  symbols-mapping-latex.tex  symbols-mapping.bash  tex-add-search-paths.tex
Appendices/: Limits.tex  LimitsBody.tex
Calibration/: EstimationParameters.py  README.md  SetupSCFdata.py
Code/: Mathematica-Code_ReadMe.tex  Mathematica_Gridpoint-At-Infinity.nb  conftest.py  test_endOfPrd.py  test_modular.py  test_notebook_sections.py  test_resources.py  test_solution.py  test_solver.py  test_struct_estimation.py
Data/: ReadMe.txt
Equations/: ConstrArt.tex  DBCLevelStart-clean.tex  DBCLevelStart.tex  Defns.tex  Envelope-clean.tex  Envelope.tex  EulercRiskyR.tex  ExogVars-clean.tex  ExogVars.tex  FOCLifeCycle-clean.tex  FOCLifeCycle.tex  FOCTm1-clean.tex  FOCTm1.tex  FOCport-clean.tex  FOCport.tex  FOCw.tex  GapEmpiricalSimulatedMedians.tex  LifeCycleMaxNormed-clean.tex  LifeCycleMaxNormed.tex  LiqCons.tex  MaxProb-clean.tex  MaxProb.tex  MoM-Inequalities.tex  MoM-KoppaOfMu.tex  PortProb.tex  Rport.tex  StructEstim.tex  TighterThreeEqns-clean.tex  TighterThreeEqns.tex  TighterUpperBound.tex  cEuler-clean.tex  cEuler.tex  cFuncAbove-clean.tex  cFuncAbove.tex  cFuncHi-clean.tex  cFuncHi.tex  dbc-with-permshk-clean.tex  dbc-with-permshk.tex  distRisky-clean.tex  distRisky.tex  (+57 more)
Excerpts/: stage-notation.texinput  the-problem.texinput
Figures/: CrossValidatePortfolio.txt  (+189 more)
(+827 files in other folders)
